--- a/forside.html
+++ b/forside.html
@@ -222,6 +222,28 @@
         </div>
       </section>
     </main>
+    <!-- Footer start -->
+    <footer>
+      <div class="footer-content">
+          <div class="contact-info">
+              <h3>Kontakt information</h3>
+              <p>Email: deltabox.wave@gmail.com</p>
+              <p>Tel: +1 234 567 890</p>
+              <p>Lokation: Aarhus C, Danmark</p>
+          </div>
+          <div class="footer-links">
+              <a href="forside.html">Forside</a>
+              <a href="cases.html">Cases</a>
+              <a href="ydelser.html">Ydelser</a>
+              <a href="about.html">Om deltabox</a>
+              <a href="kontakt.html">Kontakt</a>
+          </div>
+          <div class="footer-image">
+              <img src="img/box_cropped_t.png" alt="Beskrivelse af billedet">
+          </div>
+      </div>
+  </footer>
+  <!-- Footer slut -->
     <script src="js/util.js"></script>
     <script src="js/carousel.js"></script>
     <script
