--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>deltabox</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="ptp-overskrift">
-<img src="img/box_transparent (1).gif" alt="">
+<img src="img/box_transparent.gif" alt="">
 </div>
 
 <div class="playbutton">
-<a href="forside.html"><img src="img/88011.png" alt="PressToPlay"></a>
+<a href="forside.html"><img src="img/playbutton.png" alt="PressToPlay"></a>
 </div>
 
 <div class="ptp-press-to-start">
