--- a/udregner.html
+++ b/udregner.html
@@ -127,8 +127,8 @@
         <div class="footer-content">
             <div class="contact-info">
                 <h3>Kontakt information</h3>
-                <p>Email: deltabox.wave@gmail.com</p>
-                <p>Tel: +1 234 567 890</p>
+                <p>Email: <a href="mailto:deltabox.wave@gmail.com">deltabox.wave@gmail.com</a></p>
+            <p>Tel: <a href="tel:+125319122">+1 25 31 91 22</a></p>
                 <p>Lokation: Aarhus C, Danmark</p>
             </div>
             <div class="footer-links">
