--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>deltabox</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<div class="ptp-overskrift">
-<img src="img/box_transparent.gif" alt="">
-</div>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="ptp-overskrift">
+      <img src="img/box_transparent.gif" alt="" />
+    </div>
 
-<div class="playbutton">
-<a href="forside.html"><img src="img/playbutton.png" alt="PressToPlay"></a>
-</div>
+    <div class="playbutton">
+      <a href="forside.html"
+        ><img src="img/playbutton.png" alt="PressToPlay"
+      /></a>
+    </div>
 
-<div class="ptp-press-to-start">
-<h3>Press to start...</h3>
-</div>
-</body>
+    <div class="ptp-press-to-start">
+      <h3>Press to start...</h3>
+    </div>
+  </body>
 </html>
